<resources>
    <string name="app_name" translatable="false">Sudoku</string>
    <string name="title_activity_game_view" translatable="false">Sudoku</string>
    <string name="cancel">Cancel</string>
    <string name="new_game">New Game</string>
    <string name="menu_main">Main Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_highscore">Highscore</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_reset">Reset Board</string>
    <string name="menu_share">Share Board</string>
    <string name="menu_continue_game">Continue Game</string>
    <string name="create_game">Create Game</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="generating">Generating new level in the background&#8230;</string>
    <string name="impossible_import_notice">The sudoku you wish to import has no solution.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_group_highlight_selection">Selection highlight</string>
    <string name="pref_highlight_connected">Connected Fields</string>
    <string name="pref_group_highlight_value">Value highlight</string>
    <string name="pref_highlight_vals">Same values</string>
    <string name="pref_highlight_notes">Notes</string>
    <string name="pref_header_game">Game</string>
    <string name="pref_group_game">Game settings</string>
    <string name="pref_symbols">Symbols</string>
    <string name="pref_automatic_note_deletion">Note deletion</string>
    <string name="pref_automatic_note_deletion_summary">Automatically remove notes when setting values on connected cells</string>
    <string name="pref_deactivate_timer">Deactivate Timer</string>
    <string name="pref_deactivate_timer_summary">If selected, the time needed to complete a sudoku won\'t be measured. Games played without an active timer won\'t be recorded in the stats.</string>
    <string name="pref_timer_reset">Timer Reset</string>
    <string name="pref_timer_reset_summary">Also reset the timer, when resetting the game board.</string>
    <string name="pref_dark_mode">Dark Theme</string>
    <string name="pref_group_dark_theme">Dark Theme settings</string>
    <string name="pref_dark_mode_automatically_by_system">Automatically by system </string>
    <string name="pref_dark_mode_automatically_by_battery">Automatically by battery </string>
    <string name="pref_dark_mode_setting">Dark Theme</string>
    <string name="pref_dark_mode_summary">switch between light and dark theme</string>
    <string name="app_name_long" translatable="false">Privacy Friendly Sudoku</string>
    <string name="version_number">Version:</string>
    <string name="about_author">Authors:</string>
    <string name="about_author_names" translatable="false">Christopher Beckmann, Timm Lippert,</string>
    <string name="about_co_author_names" translatable="false">Katharina Kaus, Erik Waegerle</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Karlsruher Institute for Technology (KIT). Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-sudoku">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="about_qqwing">This application uses a modified version of QQWing v1.3.4</string>
    <string name="about_qqwingLink" translatable="false"><a href="http://qqwing.com/download.html">http://qqwing.com/</a></string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_moderate">Moderate</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_custom">Custom</string>
    <string name="Sudoku" translatable="false">Sudoku</string>
    <string name="gametype_default_9x9" translatable="false">Sudoku 9x9</string>
    <string name="gametype_default_6x6" translatable="false">Sudoku 6x6</string>
    <string name="gametype_unspecified">Unspecified</string>
    <string name="gametype_default_12x12" translatable="false">Sudoku 12x12</string>
    <string name="gametype_x_9x9" translatable="false">X Sudoku 9x9</string>
    <string name="gametype_hyper_9x9" translatable="false">Hyper Sudoku 9x9</string>
    <string name="hint_usage">Select a valid field and then press the hint button to reveal the solution.</string>
    <string name="hint_confirmation">Are you sure you want to use this hint? When using hints, you will not be able to achieve a personal best time.</string>
    <string name="hint_confirmation_confirm">Use</string>
    <string name="reset_confirmation">Are you sure you want to reset the game board?</string>
    <string name="reset_confirmation_confirm">Reset</string>
    <string name="share_confirmation_confirm">Share</string>
    <string name="copy_code_confirmation_toast">Copied to clipboard</string>
    <string name="copy_code_error_toast">Cannot access clipboard</string>
    <string name="loadgame_delete_confirmation">Are you sure you want to delete this save?</string>
    <string name="loadgame_delete_confirm">Delete</string>
    <string name="number_of_hints"># used hints:</string>
    <string name="number_of_games"># completed games:</string>
    <string name="total_of_time">Total time played:</string>
    <string name="average_time">Ø-time:</string>
    <string name="min_time">Best time:</string>
    <string name="reset_stats">Reset All</string>
    <string name="win_text">Congratulations!</string>
    <string name="win_button_text">Continue</string>
    <string name="title_activity_help">Help</string>
    <string name="win_time">Time:</string>
    <string name="win_hint">Hints:</string>
    <string name="win_show_game">Show gamefield</string>
    <string name="win_best_time">New record!</string>
    <string name="help_keyboard">Keyboard</string>
    <string name="help_keyhighlighted_summary">Indicates that the value is selected. Values are set directly when touching fields in this mode, without selecting the field.</string>
    <string name="help_keyhighlighted_yellow_summary">Indicates that the correct number of values for this number have been placed.</string>
    <string name="help_do">Do button</string>
    <string name="help_do_summary">Redoes the last undone action</string>
    <string name="help_undo">Undo button</string>
    <string name="help_undo_summary">Undoes the last action</string>
    <string name="help_hint">Hint button</string>
    <string name="help_hint_summary">Unveals the selected field\nWarning: When used, the current game can not count towards a new best time.</string>
    <string name="help_delete">Delete button</string>
    <string name="help_delete_summary">Deletes a selected field</string>
    <string name="help_notes">Note toggle button</string>
    <string name="help_notes_summary">Toggles if numbers should be set as notes or as values in a field</string>
    <string name="finalize">Finalize button</string>
    <string name="finalize_summary">Confirms the numeric input in the create sudoku game mode </string>
    <string name="help_import">Import button</string>
    <string name="help_import_summary">Imports a new, customizable sudoku field into the create sudoku game mode.\nWarning: this will override the entire field and its old values cannot be recovered.</string>
    <string name="help_privacyInfo">Privacy Info</string>
    <string name="help_permissions">Permissions</string>
    <string name="help_permissions_summary">Privacy Friendly Sudoku does not use any permissions.</string>
    <string name="okay">Okay</string>
    <string name="difficulty_challenge">Challenge</string>
    <string name="pref_highlightInputError">Highlight input mistakes</string>
    <string name="pref_keep_screen_on">Keep Screen On</string>
    <string name="pref_keep_screen_on_summary">Don\'t turn the screen off while playing</string>
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">Welcome to Privacy Friendly Sudoku!</string>
    <string name="slide2_heading">Game mode</string>
    <string name="slide2_text">Swipe or press the arrow buttons on the left and right to change the game mode.</string>
    <string name="slide3_heading">Difficulty /</string>
    <string name="slide3_heading2">custom sudoku</string>
    <string name="slide3_text">Press or swipe the stars to change the difficulty.
        Press the circle to activate the Custom Sudoku game mode and create your own sudoku.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_daily_sudoku">Daily Sudoku</string>
    <string name="finished_daily_sudoku">You have already solved the sudoku of the day</string>
    <string name="daily_number_of_hints">Used hints</string>
    <string name="number_of_completed_games">Completed games</string>
    <string name="menu_import_custom_sudoku">Import Sudoku</string>
    <string name="menu_import_wrong_format_custom_sudoku">Your link needs to have one of the following prefixes:</string>
    <string name="dialog_import_custom_sudoku">Enter the link of the sudoku you wish to import:</string>
    <string name="dialog_import_custom_sudoku_positive_button">Import</string>
    <string name="finalize_custom_sudoku_dialog">Do you wish to finalize this sudoku?</string>
    <string name="verify_custom_sudoku_process_toast">Verifying&#8230;</string>
    <string name="finished_verifying_custom_sudoku_toast">Done verifying!</string>
    <string name="failed_to_verify_custom_sudoku_toast">Verification failed: Your sudoku cannot be solved.</string>
    <string name="title_activity_settings_new">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="gametype_default_16x16" translatable="false">Sudoku 16x16</string>
    <string name="game_config_unsupported">This game combination is currently not supported.</string>
    <string name="levels_available">Levels available: %d</string>
	<string name="dialog_goodbye_google_title">Goodbye Google Play 😢</string>
    <string name="dialog_goodbye_google_desc">Unfortunately, our apps have to say goodbye to Google Play. The app is still usable but will not receive any updates in the future.\nYou can find more information about the reasons why this is not the end of the Privacy Friendly Apps on our website:\n\n<a href="https://secuso.aifb.kit.edu/english/2809.php">Click here to learn more</a>
    </string>
    <string name="dialog_goodbye_google_deactivate_notice">Don\'t show this notice again.</string>
</resources>