<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/ver3_board_operation_group">
        <item android:id="@+id/menu_reset" android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/menu_reset" />
        <item android:id="@+id/menu_share" android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_share" />
    </group>

    <group android:id="@+id/group4">
        <item android:id="@+id/nav_newgame" android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_main" />
        <item android:id="@+id/nav_highscore" android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_highscore" />
    </group>

    <group android:id="@+id/group5">
        <item android:id="@+id/menu_settings" android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
            <item android:id="@+id/menu_help" android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_help" />
            <item android:id="@+id/menu_about" android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
    </group>

</menu>