<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_group_game">
    <SwitchPreference android:id="@+id/pref_automatic_note_deletion"
        android:key="pref_automatic_note_deletion"
        android:title="@string/pref_automatic_note_deletion"
        android:summary="@string/pref_automatic_note_deletion_summary"
        android:defaultValue="true"/>

    <SwitchPreference android:id="@+id/pref_timer_reset"
        android:key="pref_timer_reset"
        android:title="@string/pref_timer_reset"
        android:summary="@string/pref_timer_reset_summary"
        android:defaultValue="true" />

    <SwitchPreference android:id="@+id/pref_keep_screen_on"
        android:key="pref_keep_screen_on"
        android:title="@string/pref_keep_screen_on"
        android:summary="@string/pref_keep_screen_on_summary"
        android:defaultValue="true"/>

        <ListPreference
        android:key="pref_symbols"
        android:title="@string/pref_symbols"
        android:defaultValue="Default"
        android:entries="@array/pref_symbols_list_titles"
        android:entryValues="@array/pref_symbols_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_group_highlight_selection">
        <SwitchPreference android:id="@+id/pref_highlight_connected"
            android:key="pref_highlight_connected"
            android:title="@string/pref_highlight_connected"
            android:summary=""
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_group_highlight_value">
        <SwitchPreference android:id="@+id/pref_highlight_vals"
            android:key="pref_highlight_vals"
            android:title="@string/pref_highlight_vals"
            android:summary=""
            android:defaultValue="true"/>
        <SwitchPreference android:id="@+id/pref_highlight_notes"
            android:key="pref_highlight_notes"
            android:title="@string/pref_highlight_notes"
            android:summary=""
            android:defaultValue="true"/>
        <SwitchPreference android:id="@+id/pref_highlightInputError"
            android:key="pref_highlightInputError"
            android:title="@string/pref_highlightInputError"
            android:summary=""
            android:defaultValue="true"/>
    </PreferenceCategory>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!-- <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_title_display_name"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" /> -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!-- <ListPreference
        android:key="example_list"
        android:title="@string/pref_title_add_friends_to_messages"
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" /> -->

</PreferenceScreen>
