<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundTutorialSlide">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide3_heading"
            android:textColor="?attr/lightestFontColor"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide3_heading2"
            android:textColor="?attr/lightestFontColor"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/circleButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/backgroundTutorialStars"
                android:button="@drawable/create_game_src"
                android:clickable="false" />

            <RatingBar
                android:id="@+id/difficultyBar"
                style="@style/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:layout_gravity="center_horizontal"
                android:numStars="4"
                android:rating="1"
                android:background="?attr/backgroundTutorialStars"
                android:stepSize="1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/slide3_text"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:textColor="?attr/lightestFontColor"
            android:textSize="@dimen/slide_desc" />

    </LinearLayout>
</RelativeLayout>