<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="320dp"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="250dp" android:layout_height="250dp"
        android:background="@drawable/ic_trophy_black_48dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:background="@color/transparent"
                android:src="@drawable/ic_trophy_award_black_48dp" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:background="@color/middleblue"
                android:layout_gravity="bottom"
                android:foregroundGravity="bottom"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/win_middle_linear"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:background="@color/transparent"
            android:orientation="vertical"
            android:weightSum="5"
            >
            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginTop="46dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/win_text"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/win_time"
                    android:layout_gravity="center"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/win_time"
                    android:text=""
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/win_hint"
                    android:textColor="@color/white"
                    android:layout_gravity="center" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/win_hints"
                    android:text=""
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/win_best_time"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:visibility="invisible"
                    android:id="@+id/win_new_besttime"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:background="@color/middleblue"
                    android:layout_gravity="bottom"
                    android:foregroundGravity="bottom"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:orientation="vertical"
            android:gravity="bottom">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_trophy_award_black_48dp"
                android:background="@color/transparent" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:background="@color/middleblue"
                android:layout_gravity="bottom"
                android:foregroundGravity="bottom"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="5dp"
        android:weightSum="2">
        <Button
            android:id="@+id/win_continue_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/standalone_button"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/win_button_text"
            android:layout_marginRight="5dp"/>
        <Button
            android:id="@+id/win_showGame_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/standalone_button"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/win_show_game"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>
</LinearLayout>