<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:fitsSystemWindows="true"
    tools:context="tu_darmstadt.sudoku.ui.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

   <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:layout_marginTop="?attr/actionBarSize"
        style="?android:buttonBarStyle">

        <android.support.v4.view.ViewPager
            android:id="@+id/scroller"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/scroller"
            android:layout_weight="6"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="tu_darmstadt.sudoku.ui.MainActivity"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:weightSum="8"
            android:divider="#000"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            style="?android:buttonBarStyle">


            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/difficultyBar"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:numStars="4"
                android:rating="1"
                android:stepSize="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/menu_new_game"
                android:textStyle="normal"
                android:id="@+id/playButton"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:onClick="onClick"
                android:capitalize="none"
                android:clickable="false"
                android:elevation="10dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/menu_continue_game"
                android:textStyle="normal"
                android:id="@+id/continueButton"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:onClick="onClick"
                android:capitalize="none"
                android:clickable="false"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:weightSum="2"
                style="?android:buttonBarStyle">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="1dp"
                    android:text="@string/menu_highscore"
                    android:textStyle="normal"
                    android:id="@+id/highscoreButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:capitalize="none"
                    android:clickable="false"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/menu_settings"
                    android:textStyle="normal"
                    android:id="@+id/settingsButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:capitalize="none"
                    android:clickable="false"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:weightSum="2"
                style="?android:buttonBarStyle">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="1dp"
                    android:text="@string/menu_about"
                    android:textStyle="normal"
                    android:id="@+id/aboutButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:capitalize="none"
                    android:clickable="false"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/menu_help"
                    android:textStyle="normal"
                    android:id="@+id/helpButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:capitalize="none"
                    android:clickable="false"
                    />
            </LinearLayout>
        </LinearLayout>

   </LinearLayout>

</android.support.design.widget.CoordinatorLayout>